# supcoin

./: .gitignore  .travis.yml  COPYING  INSTALL  Makefile.am  README.md  autogen.sh  buildnode.sh  configure.ac
.tx/: config
build-aux/m4/: bitcoin_find_bdb48.m4  supcoin_qt.m4  supcoin_subdir_to_include.m4
contrib/: README.md  bitcoin-qt.pro  qt_translations.py  supcoind.bash-completion  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  bitcoin-qt.desktop  bitcoin-qt.lintian-overrides  bitcoind.examples  bitcoind.lintian-overrides  bitcoind.manpages  changelog  control  copyright  rules  supcoin-qt.install  supcoin-qt.protocol  supcoind.bash-completion  supcoind.install  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: linux-download-config  win32-download-config
contrib/init/: README.md  bitcoind.conf  bitcoind.openrcconf  supcoind.openrc  supcoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: README.md  background.xcf  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md  makeseeds.py
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: Makefile  README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
doc/release-notes/: release-notes-0.3.12.md  release-notes-0.3.13.md  release-notes-0.3.14.md  release-notes-0.3.15.md  release-notes-0.3.18.md  release-notes-0.3.20.2.md  release-notes-0.3.20.md  (+34 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clearblocks.sh  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  crypter.h  db.h  eccryptoverify.h  ecwrapper.h  hash.cpp  hash.h  init.cpp  init.h  key.cpp  key.h  keystore.h  (+61 more)
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/primitives/: block.cpp  block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bitcoin_locale.qrc  bitcoinaddressvalidator.h  bitcoinamountfield.h  bitcoingui.cpp  bitcoinstrings.cpp  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  macdockiconhandler.h  macdockiconhandler.mm  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  optionsdialog.cpp  optionsdialog.h  optionsmodel.cpp  optionsmodel.h  overviewpage.cpp  overviewpage.h  paymentrequest.proto  (+52 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: bitcoin_ach.ts  bitcoin_af_ZA.ts  bitcoin_ca.ts  bitcoin_ca@valencia.ts  bitcoin_de.ts  bitcoin_el_GR.ts  bitcoin_en.ts  bitcoin_eo.ts  bitcoin_es.ts  bitcoin_es_CL.ts  bitcoin_es_DO.ts  bitcoin_es_UY.ts  bitcoin_eu_ES.ts  bitcoin_fa.ts  bitcoin_fi.ts  bitcoin_fr_CA.ts  bitcoin_gl.ts  bitcoin_gu_IN.ts  bitcoin_hi_IN.ts  bitcoin_hr.ts  bitcoin_hu.ts  bitcoin_id_ID.ts  bitcoin_ja.ts  bitcoin_ka.ts  bitcoin_kk_KZ.ts  bitcoin_ky.ts  bitcoin_la.ts  bitcoin_lt.ts  bitcoin_mn.ts  bitcoin_ms_MY.ts  bitcoin_pam.ts  bitcoin_pl.ts  bitcoin_pt_PT.ts  bitcoin_ro_RO.ts  bitcoin_sk.ts  bitcoin_sq.ts  bitcoin_sr.ts  bitcoin_tr.ts  bitcoin_uk.ts  bitcoin_zh_CN.ts  (+52 more)
src/qt/res/: bitcoin-qt-res.rc
src/qt/res/icons/: supcoin.icns
src/qt/test/: Makefile  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: bitcoinconsensus.cpp  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h  supcoinconsensus.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_supcoin_NativeSecp256k1.c  org_supcoin_NativeSecp256k1.h
src/secp256k1/src/java/org/supcoin/: NativeSecp256k1.java
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  alert_tests.cpp  allocator_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bignum.h  bip32_tests.cpp  bitcoin-util-test.py  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  main_tests.cpp  miner_tests.cpp  mruset_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  script_P2SH_tests.cpp  script_tests.cpp  scriptnum_tests.cpp  serialize_tests.cpp  sighash_tests.cpp  sigopcount_tests.cpp  skiplist_tests.cpp  test_supcoin.cpp  timedata_tests.cpp  transaction_tests.cpp  (+3 more)
src/test/data/: README.md  script_invalid.json  supcoin-util-test.json  tx_invalid.json  tx_valid.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+54 files in other folders)
